--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                             </div>
                         </div>
                         <div id="ham-btn">
-                            <div class="line1"></div>
-                            <div class="line2"></div>
-                            <div class="line3"></div>
-                            <div class="line4"></div>
+                            <div class="hamline line1"></div>
+                            <div class="hamline line2"></div>
+                            <div class="hamline line3"></div>
+                            <div class="hamline line4"></div>
                         </div>
                     </div>
 
@@ -394,7 +394,20 @@
 
 
         <div class="contri-left-div outer-half">
-            d
+            <div class="main-logo-div">
+                <div class="logo-part upper-logo">
+                    <div class="logo-part-div left-up"></div>
+                    <div class="logo-part-div right-up"></div>
+
+                </div>
+                <div class="logo-part lower-logo">
+                    <div class="logo-part-div left-down"></div>
+                    <div class="logo-part-div right-down"></div>
+
+                </div>
+
+            </div>
+            
         </div>
         <div class="contri-right-div outer-half">
             <div class="right-div1">
