created main logo

--- a/index.html
+++ b/index.html
@@ -396,13 +396,25 @@
         <div class="contri-left-div outer-half">
             <div class="main-logo-div">
                 <div class="logo-part upper-logo">
-                    <div class="logo-part-div left-up"></div>
-                    <div class="logo-part-div right-up"></div>
+                    <div class="logo-part-div left-up">
+                        <div class="cut cut1"></div>
+                        <div class="cut cut2"></div>
+                    </div>
+                    <div class="logo-part-div right-up">
+                        <div class="cut cut3"></div>
+                        <div class="cut cut4"></div>
+                    </div>
 
                 </div>
                 <div class="logo-part lower-logo">
-                    <div class="logo-part-div left-down"></div>
-                    <div class="logo-part-div right-down"></div>
+                    <div class="logo-part-div left-down">
+                        <div class="cut cut5"></div>
+                        <div class="cut cut6"></div>
+                    </div>
+                    <div class="logo-part-div right-down">
+                        <div class="cut cut7"></div>
+                        <div class="cut cut8"></div>
+                    </div>
 
                 </div>
 
