--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
 
             </div>
             <div class="footer-lower">
-                <div class="ftr-lwr-div1">Code by Dennis</div>
+                <div class="ftr-lwr-div1"><p>Code by Dennis</p></div>
                 <div class="ftr-lwr-div2"><p>Fabric Ventures Group S.a.r.I. All Rights Reserved.</p>
                 <span>&copy; 2023</span></div>
             </div>
