--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
     <section class="collab-sec">
         <div class="bck-ylw-txt">
-            <p>RS - PROTOCOL ARCHITECTS - ZK F</p>
+            <h1 class="abs-txt">ENGINEERIS - PROTOCOL ARCHITECTS - ZK ENGINEERS</h1>
         </div>
         <div class="outer-blur-bck">
             <div class="inner-blur-bck">
@@ -558,9 +558,11 @@
         </div>
     </section>
 
+    <!-- footer section -->
+
     <section class="footer-sec">
         <div class="footer-abs-div">
-            absolute div
+           <h1 class="abs-txt">ENGINEERIS - PROTOCOL ARCHITECTS - ZK ENGINEERS</h1>
         </div>
         <footer>
             <div class="footer-upper-outer">
